--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lodash.template": "~2.4.1",
     "glob": "~3.2.8",
     "glob-stream": "~3.1.9",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.7.0",
+    "cli-table": "~0.2.0",
+    "rimraf": "~2.2.6"
   }
 }
